# ChangeLog for mail-client/mutt
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.105 2007/04/12 13:43:45 ferdy Exp $

*mutt-1.5.15-r1 (12 Apr 2007)

  12 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org>
  +files/mutt-1.5.15-parallel-make.patch, -mutt-1.5.15.ebuild,
  +mutt-1.5.15-r1.ebuild:
  Refresh nntp patch in our patchset. Add smtp support as per bug #174123. Fix
  parallel make as per bug #173969. Fix dependencies. Remove 1.5.15-r0

  10 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> mutt-1.5.15.ebuild:
  Force -j1 as per bug #173969

*mutt-1.5.15 (09 Apr 2007)

  09 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> +mutt-1.5.15.ebuild:
  New upstream version. Added sidebar patch to our patchset

*mutt-1.5.14 (20 Mar 2007)

  20 Mar 2007; Fernando J. Pereda <ferdy@gentoo.org> +mutt-1.5.14.ebuild:
  New upstream version.

  18 Mar 2007; Marius Mauch <genone@gentoo.org> mutt-1.5.11-r2.ebuild,
  mutt-1.5.12.ebuild, mutt-1.5.13.ebuild, mutt-1.5.13-r1.ebuild,
  mutt-1.5.13-r2.ebuild:
  Replacing einfo with elog

  10 Mar 2007; Peter Weller <welp@gentoo.org> mutt-1.5.13-r1.ebuild:
  Keyworded ~x86-fbsd

*mutt-1.5.13-r2 (22 Nov 2006)

  22 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org>
  +files/mutt-1.5.13-paranoid-temp-file.patch, +mutt-1.5.13-r2.ebuild:
  Fix for bug #154310

  11 Nov 2006; Alexander H. Færøy <eroyf@gentoo.org>
  mutt-1.5.13-r1.ebuild:
  Stable on MIPS. Bug 152657.

  28 Oct 2006; Tom Knight <tomk@gentoo.org> mutt-1.5.13-r1.ebuild:
  Stable on amd64. Bug #152657

  26 Oct 2006; Jason Wever <weeve@gentoo.org> mutt-1.5.13-r1.ebuild:
  Stable on SPARC wrt bug #152657.

  25 Oct 2006; Chris White <chriswhite@gentoo.org> mutt-1.5.13-r1.ebuild:
  ppc stable for bug #152657.

  25 Oct 2006; Joshua Jackson <tsunam@gentoo.org> mutt-1.5.13-r1.ebuild:
  Stable x86; bug #152657

  25 Oct 2006; Jeroen Roovers <jer@gentoo.org> mutt-1.5.13-r1.ebuild: