@@ -82,14 +82,14 @@ EBUILD mutt-1.5.14.ebuild 4477 RMD160 854063ac3471204336557b95f2f0b84db782e1a7 S
 MD5 6886b5dc7a2af8f34dae30df116faf2e mutt-1.5.14.ebuild 4477
 RMD160 854063ac3471204336557b95f2f0b84db782e1a7 mutt-1.5.14.ebuild 4477
 SHA256 cc27d01f1d3d727b37c9b9dad92fff1afd9600301238d195cbcb69d47244bb29 mutt-1.5.14.ebuild 4477
-EBUILD mutt-1.5.15-r1.ebuild 4828 RMD160 6a9fc7aee2acfb5c7a4862378099c93081d9f8cb SHA1 3b457af0d791a5a0ec2ed4799b1cbbcf0957c05c SHA256 799f26fef01d02454b921c71b8effa07fe4926d8514b2281a2e844966cf3a104
-MD5 29a3d2f5ce4f8451cea0d4a0cfa30f08 mutt-1.5.15-r1.ebuild 4828
-RMD160 6a9fc7aee2acfb5c7a4862378099c93081d9f8cb mutt-1.5.15-r1.ebuild 4828
-SHA256 799f26fef01d02454b921c71b8effa07fe4926d8514b2281a2e844966cf3a104 mutt-1.5.15-r1.ebuild 4828
-MISC ChangeLog 25318 RMD160 c69a4fe373bd89722665afb6cb7bbf194fd1ed8b SHA1 07da4d0cb695cdb4e84a769dabaface6327882c2 SHA256 16e345096754f34f6f90d08f28579fe623d1fb252d6016d40284a43c243fd252
-MD5 8eafc3a1fd9a43681d11143bc8347be7 ChangeLog 25318
-RMD160 c69a4fe373bd89722665afb6cb7bbf194fd1ed8b ChangeLog 25318
-SHA256 16e345096754f34f6f90d08f28579fe623d1fb252d6016d40284a43c243fd252 ChangeLog 25318
+EBUILD mutt-1.5.15-r1.ebuild 4625 RMD160 d8befb9b5d33902b2f866674179ef70740c924b0 SHA1 6ad7ab6400db8a34883d725673659af3e714da2b SHA256 80d9a1251e871c47aa0827e66e9e9a750d156fac34941c2689c178e1243ee791
+MD5 e3b27695b78227cded7e1d9c857425ca mutt-1.5.15-r1.ebuild 4625
+RMD160 d8befb9b5d33902b2f866674179ef70740c924b0 mutt-1.5.15-r1.ebuild 4625
+SHA256 80d9a1251e871c47aa0827e66e9e9a750d156fac34941c2689c178e1243ee791 mutt-1.5.15-r1.ebuild 4625
+MISC ChangeLog 25458 RMD160 20d23cc1aee9c76fac64cdbdb84dd0697b8645ff SHA1 91f4c36271ac882db71aed2c8afb8a6cec81ab4d SHA256 a53fae351f2a3e20059a78b8a884ba1b7343cbed235925a53dcf75b4cc0ad491
+MD5 702e641c1f16dd0482aba94ddcafba63 ChangeLog 25458
+RMD160 20d23cc1aee9c76fac64cdbdb84dd0697b8645ff ChangeLog 25458
+SHA256 a53fae351f2a3e20059a78b8a884ba1b7343cbed235925a53dcf75b4cc0ad491 ChangeLog 25458
 MISC metadata.xml 344 RMD160 6fb7283d0c812896b18cf91969a744fe9f34f57a SHA1 6a2f5f2822e49aadad2f8b16b8a565f627cc697f SHA256 9241b10ef441b7a14e730c2feff17fa387c48291caa52e788acca2befc4ad480
 MD5 cb5fc428c975ffb2fc20fc8c577cca9a metadata.xml 344
 RMD160 6fb7283d0c812896b18cf91969a744fe9f34f57a metadata.xml 344
@@ -118,7 +118,7 @@ SHA256 4fb1da114e5f44603003b8d643dc5e45138ab8e1f45e6de39271096b13feb56e files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD4DBQFGHjeuViELBEf1JB0RAqIjAJY2mypvlxtr0ZMH8bDMrok3rr59AKCCKhYo
-n7hPaxHzl2o1fnIwbtzGaw==
-=8g1K
+iD8DBQFGHqeIViELBEf1JB0RAjveAJ9bbTMitIRbwFVyeaUJnSGf9ayURQCfUTLw
+mR4aJOSLL+osq9hNkOiW28g=
+=1Yvs
 -----END PGP SIGNATURE-----
