@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/mutt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.105 2007/04/12 13:43:45 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.106 2007/04/12 21:41:16 ferdy Exp $
+
+  12 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> mutt-1.5.15-r1.ebuild:
+  Remove some deprecated options and use flags, thanks to exg.
 
 *mutt-1.5.15-r1 (12 Apr 2007)
 
